Core: Increases security of some core constructs
This also includes a fix for `session_id`'s not being properly rotated
when they become invalid. Generally the security was high enough for
what we were using these constructs for, but this may change in the
future, so it's better to have them be as robust as possible now.

TYPE: Bugfix
LINK: SEA-1051
HINT: Consider rotating the application and csrf secrets during upgrade

--- a/setup.cfg
+++ b/setup.cfg
@@ -78,8 +78,8 @@ install_requires =
     dogpile.cache
     dukpy
     editdistance
-    elasticsearch>=7.0.0,<8.0.0
-    elasticsearch-dsl>=7.0.0,<8.0.0
+    elasticsearch>=7.17.9,<8.0.0
+    elasticsearch-dsl>=7.4.1,<8.0.0
     email-validator
     faker
     feedgen
@@ -252,7 +252,8 @@ test =
     pytest
     pytest-asyncio
     pytest-localserver
-    pytest-redis
+    # FIXME: Update test fixtures to make them work again
+    pytest-redis<3.1.0
     pytest-rerunfailures
     pytest-timeout
     pyyaml
